' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Film" {
  * id: integer <<generated>>
  --
  * fassung: integer
  * barcode: text
  * rating: number
  * filmart: text
  * preis: number
    release: date
  * **titel_id**: integer <<FK>>
    genre: text
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Titel" {
  * id: integer <<generated>>
  --
  * titel: text
    untertitel: text
}

entity "Abbildung" {
  * id: integer <<generated>>
  --
  * beschriftung: text
    contentType: text
  * **film_id**: integer <<FK>>
}

Film ||..|| Titel
Film ||..o{ Abbildung


@enduml
